--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.5",
     "@reduxjs/toolkit": "^1.6.1",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
+    "firebase": "^8.8.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-reanimated": "^2.2.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
