--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.21.1",
     "expo": "~42.0.1",
     "expo-font": "~9.2.1",
+    "expo-linking": "^2.3.1",
     "expo-media-library": "~12.1.2",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
@@ -24,7 +25,9 @@
     "react-native-modal-datetime-picker": "^10.2.0",
     "react-native-reanimated": "^2.2.0",
     "react-native-web": "~0.13.12",
-    "react-native-webview": "11.6.2"
+    "react-native-webview": "11.6.2",
+    "expo-auth-session": "~3.3.1",
+    "expo-random": "~11.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
