--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   "dependencies": {
     "@react-native-community/cameraroll": "^4.0.4",
     "@react-native-community/datetimepicker": "3.5.2",
+    "@react-native-picker/picker": "1.16.1",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.3",
     "@reduxjs/toolkit": "^1.6.1",
     "axios": "^0.21.1",
     "expo": "~42.0.1",
+    "expo-auth-session": "~3.3.1",
     "expo-font": "~9.2.1",
     "expo-linking": "^2.3.1",
     "expo-media-library": "~12.1.2",
+    "expo-random": "~11.2.0",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -25,9 +28,7 @@
     "react-native-modal-datetime-picker": "^10.2.0",
     "react-native-reanimated": "^2.2.0",
     "react-native-web": "~0.13.12",
-    "react-native-webview": "11.6.2",
-    "expo-auth-session": "~3.3.1",
-    "expo-random": "~11.2.0"
+    "react-native-webview": "11.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
