--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-modal-datetime-picker": "^10.2.0",
     "react-native-reanimated": "^2.2.0",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "react-native-webview": "11.6.2"
   },
