--- a/package.json
+++ b/package.json
@@ -23,16 +23,15 @@
     "expo-media-library": "~12.1.2",
     "expo-random": "~11.2.0",
     "expo-status-bar": "~1.0.4",
-    "firebase": "8.2.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-dotenv": "^3.2.0",
     "react-native-modal-datetime-picker": "^10.2.0",
     "react-native-reanimated": "^2.2.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
-    "react-native-webview": "11.6.2",
-    "sharp": "^0.29.0"
+    "react-native-webview": "11.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
